uipath-commons/main/default/objects/Account/fields/Geo__c.field-meta.xml
<CustomField>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>