uipath-commons/main/default/objects/Account/fields/GIC__c.field-meta.xml
<CustomField>
        <fullName>GIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GIC</label>
        <type>Checkbox</type>
    </CustomField>