uipath-commons/main/default/objects/Account/fields/Global_Account_ID__c.field-meta.xml
<CustomField>
        <fullName>Global_Account_ID__c</fullName>
        <description>This is the system agnostic unique Id for each customer/partner and will be used to identify the Account uniquely by the business, Sales Ops, Finance etc</description>
        <displayFormat>ACC-{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Universal Account ID - It is system agnostic Id and will be used to identify the customer by Sales Ops, Deal Hub, Finance etc. in Salesforce, NetSuite and other systems</inlineHelpText>
        <label>Unique Account ID</label>
        <type>AutoNumber</type>
    </CustomField>