uipath-commons/main/default/objects/Account/fields/Global_Fortune_500__c.field-meta.xml
<CustomField>
    <fullName>Global_Fortune_500__c</fullName>
    <description>Show Global 500 Fortune Rank. Edit rights only to Data Stewards</description>
    <label>Global Fortune 500</label>
    <length>10</length>
    <type>Text</type>
</CustomField>