uipath-commons/main/default/objects/Account/fields/GSI_Representative__c.field-meta.xml
<CustomField>
    <fullName>GSI_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GSI Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GSI_Representative</relationshipName>
    <type>Lookup</type>
</CustomField>