uipath-commons/main/default/objects/Account/fields/Has_Active_Opportunities__c.field-meta.xml
<CustomField>
        <fullName>Has_Active_Opportunities__c</fullName>
        <formula>if( latest_product_end_date__c &gt;= today(), true, false)</formula>
        <label>Has Active Opportunities</label>
        <type>Checkbox</type>
    </CustomField>