uipath-commons/main/default/objects/Account/fields/Has_CSD__c.field-meta.xml
<CustomField>
    <fullName>Has_CSD__c</fullName>
    <formula>if( CSD__c  &lt;&gt; &quot;&quot;, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has CSD</label>
    <type>Checkbox</type>
</CustomField>