uipath-commons/main/default/objects/Account/fields/Has_CSM__c.field-meta.xml
<CustomField>
    <fullName>Has_CSM__c</fullName>
    <formula>if(CSM__c &lt;&gt; &quot;&quot;, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has CSM</label>
    <type>Checkbox</type>
</CustomField>