uipath-commons/main/default/objects/Account/fields/Has_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Has_Open_Opportunities__c</fullName>
    <description>Counts all opps except from won and lost</description>
    <label>Has Open Opportunities?</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Deal Registration, Discovery, Demo, POC, Proposal, Negotiation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>