uipath-commons/main/default/objects/Account/fields/Has_Premium_Care__c.field-meta.xml
<CustomField>
    <fullName>Has_Premium_Care__c</fullName>
    <label>Has Premium Care</label>
    <summaryFilterItems>
        <field>Opportunity.Has_Premium_Care__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>