uipath-commons/main/default/objects/Account/fields/hip_starting_pointUiPath_relations__c.field-meta.xml
<CustomField>
    <fullName>hip_starting_pointUiPath_relations__c</fullName>
    <label>UiPath relationship starting point</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>