uipath-commons/main/default/objects/Account/fields/Hoom_Status__c.field-meta.xml
<CustomField>
    <fullName>Hoom_Status__c</fullName>
    <description>Used by ToHoom Flow</description>
    <label>Hoom Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>