uipath-commons/main/default/objects/Account/fields/Ignore_Territory_Assignment__c.field-meta.xml
<CustomField>
        <fullName>Ignore_Territory_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Territory Assignment</label>
        
        <type>Checkbox</type>
    </CustomField>