uipath-commons/main/default/objects/Account/fields/Indirect_Reseller_Signed__c.field-meta.xml
<CustomField>
        <fullName>Indirect_Reseller_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indirect Reseller Signed</label>
        <type>Checkbox</type>
    </CustomField>