uipath-commons/main/default/objects/Account/fields/Integration_description__c.field-meta.xml
<CustomField>
        <fullName>Integration_description__c</fullName>
        <description>Used by Tech Alliances</description>
        <label>Integration description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </CustomField>