uipath-commons/main/default/objects/Account/fields/Internal_Credit_Limit__c.field-meta.xml
<CustomField>
        <fullName>Internal_Credit_Limit__c</fullName>
        <description>Used by Finance Team</description>
        <inlineHelpText>Used by Finance Team</inlineHelpText>
        <label>Internal Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>