uipath-commons/main/default/objects/Account/fields/Involved_in_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Involved_in_Opportunities__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Involved in Opportunities</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>