uipath-commons/main/default/objects/Account/fields/Key_Account_Priority__c.field-meta.xml
<CustomField>
        <fullName>Key_Account_Priority__c</fullName>
        <formula>If  (Key_Account_Priority_Number__c = 30, &quot;High&quot;, If (Key_Account_Priority_Number__c = 20, &quot;Normal&quot;, If (Key_Account_Priority_Number__c = 10, &quot;Low&quot;, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Account Priority</label>
        <type>Text</type>
    </CustomField>