uipath-commons/main/default/objects/Account/fields/Key_Account_Priority_Number__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Priority_Number__c</fullName>
    <label>Key Account Priority Number</label>
    <summarizedField>Opportunity.Key_Account_Priority_Number__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>