uipath-commons/main/default/objects/Account/fields/KomikoBestConenction__c.field-meta.xml
<CustomField>
    <fullName>KomikoBestConenction__c</fullName>
    <description>Best Connection</description>
    <label>Best Connection</label>
    <length>64</length>
    <type>Text</type>
</CustomField>