uipath-commons/main/default/objects/Account/fields/KomikoBestContactId__c.field-meta.xml
<CustomField>
        <fullName>KomikoBestContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Best Contact</description>
        <label>Best Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>KomikoAccountBestContact</relationshipName>
        <type>Lookup</type>
    </CustomField>