uipath-commons/main/default/objects/Account/fields/KomikoId__c.field-meta.xml
<CustomField>
    <fullName>KomikoId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>InboxAI Id</description>
    <externalId>true</externalId>
    <label>InboxAI Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>