uipath-commons/main/default/objects/Account/fields/KomikoKScore__c.field-meta.xml
<CustomField>
    <fullName>KomikoKScore__c</fullName>
    <description>Yearly K-Score</description>
    <label>Yearly K-Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>