uipath-commons/main/default/objects/Account/fields/KomikoKScorePercentile__c.field-meta.xml
<CustomField>
    <fullName>KomikoKScorePercentile__c</fullName>
    <description>Yearly K-Score Percentile</description>
    <label>Yearly K-Score Percentile</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>