uipath-commons/main/default/objects/Account/fields/KomikoKScorePercentileTrend__c.field-meta.xml
<CustomField>
        <fullName>KomikoKScorePercentileTrend__c</fullName>
        <description>Yearly K-Score Percentile Trend</description>
        <label>Yearly K-Score Percentile Trend</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>