uipath-commons/main/default/objects/Account/fields/KomikoKScoreTrend__c.field-meta.xml
<CustomField>
    <fullName>KomikoKScoreTrend__c</fullName>
    <description>Yearly K-Score Trend</description>
    <label>Yearly K-Score Trend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>