uipath-commons/main/default/objects/Account/fields/KomikoLastEventDateTime__c.field-meta.xml
<CustomField>
    <fullName>KomikoLastEventDateTime__c</fullName>
    <description>Last Meeting</description>
    <label>Last Meeting</label>
    <type>DateTime</type>
</CustomField>