uipath-commons/main/default/objects/Account/fields/KomikoLastEventOrganizer__c.field-meta.xml
<CustomField>
        <fullName>KomikoLastEventOrganizer__c</fullName>
        <description>Last Meeting Organizer</description>
        <label>Last Meeting Organizer</label>
        <length>64</length>
        <type>Text</type>
    </CustomField>