uipath-commons/main/default/objects/Account/fields/KomikoLastInboundContactId__c.field-meta.xml
<CustomField>
        <fullName>KomikoLastInboundContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Inbound Interaction From</description>
        <label>Last Inbound Interaction From</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>KomikoLastInboundContact</relationshipName>
        <type>Lookup</type>
    </CustomField>