uipath-commons/main/default/objects/Account/fields/KomikoLastInboundDateTime__c.field-meta.xml
<CustomField>
    <fullName>KomikoLastInboundDateTime__c</fullName>
    <description>Last Inbound</description>
    <label>Last Inbound</label>
    <type>DateTime</type>
</CustomField>