uipath-commons/main/default/objects/Account/fields/KomikoLastOutboundConnection__c.field-meta.xml
<CustomField>
        <fullName>KomikoLastOutboundConnection__c</fullName>
        <description>Last Outbound Interaction From</description>
        <label>Last Outbound Interaction From</label>
        <length>64</length>
        <type>Text</type>
    </CustomField>