uipath-commons/main/default/objects/Account/fields/KomikoLastOutboundDateTime__c.field-meta.xml
<CustomField>
    <fullName>KomikoLastOutboundDateTime__c</fullName>
    <description>Last Outbound</description>
    <label>Last Outbound</label>
    <type>DateTime</type>
</CustomField>