uipath-commons/main/default/objects/Account/fields/KomikoMKScore__c.field-meta.xml
<CustomField>
        <fullName>KomikoMKScore__c</fullName>
        <description>Monthly K-Score</description>
        <label>Monthly K-Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>