uipath-commons/main/default/objects/Account/fields/KomikoMKScorePercentile__c.field-meta.xml
<CustomField>
    <fullName>KomikoMKScorePercentile__c</fullName>
    <description>Monthly K-Score Percentile</description>
    <label>Monthly K-Score Percentile</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>