uipath-commons/main/default/objects/Account/fields/KomikoMKScorePercentileTrend__c.field-meta.xml
<CustomField>
    <fullName>KomikoMKScorePercentileTrend__c</fullName>
    <description>Monthly K-Score Percentile Trend</description>
    <label>Monthly K-Score Percentile Trend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>