uipath-commons/main/default/objects/Account/fields/KomikoMKScoreTrend__c.field-meta.xml
<CustomField>
        <fullName>KomikoMKScoreTrend__c</fullName>
        <description>Monthly K-Score Trend</description>
        <label>Monthly K-Score Trend</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>