uipath-commons/main/default/objects/Account/fields/KomikoNextEventOrganizer__c.field-meta.xml
<CustomField>
        <fullName>KomikoNextEventOrganizer__c</fullName>
        <description>Next Meeting Organizer</description>
        <label>Next Meeting Organizer</label>
        <length>64</length>
        <type>Text</type>
    </CustomField>