uipath-commons/main/default/objects/Account/fields/KomikoQKScore__c.field-meta.xml
<CustomField>
    <fullName>KomikoQKScore__c</fullName>
    <description>Quarterly K-Score</description>
    <label>Quarterly K-Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>