uipath-commons/main/default/objects/Account/fields/KomikoQKScorePercentile__c.field-meta.xml
<CustomField>
        <fullName>KomikoQKScorePercentile__c</fullName>
        <description>Quarterly K-Score Percentile</description>
        <label>Quarterly K-Score Percentile</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>