uipath-commons/main/default/objects/Account/fields/KomikoQKScorePercentileTrend__c.field-meta.xml
<CustomField>
    <fullName>KomikoQKScorePercentileTrend__c</fullName>
    <description>Quarterly K-Score Percentile Trend</description>
    <label>Quarterly K-Score Percentile Trend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>