uipath-commons/main/default/objects/Account/fields/KomikoQKScoreTrend__c.field-meta.xml
<CustomField>
        <fullName>KomikoQKScoreTrend__c</fullName>
        <description>Quarterly K-Score Trend</description>
        <label>Quarterly K-Score Trend</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>