uipath-commons/main/default/objects/Account/fields/Last_Screening_Date__c.field-meta.xml
<CustomField>
        <fullName>Last_Screening_Date__c</fullName>
        <inlineHelpText>The last date when Anti-social Forces Screening is carried out for this account. used in Japan only.</inlineHelpText>
        <label>Last Screening Date</label>
        <type>Date</type>
    </CustomField>