uipath-commons/main/default/objects/Account/fields/Last_seen_on_website__c.field-meta.xml
<CustomField>
        <fullName>Last_seen_on_website__c</fullName>
        <description>This is the number of days ago a contact from the customer was seen on the website. This information is pulled from DemandBase by a bot and uploaded to Salesforce once a day</description>
        <inlineHelpText>Number of days ago someone from this account visited our website</inlineHelpText>
        <label>Last Seen on Website</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>