uipath-commons/main/default/objects/Account/fields/latest_product_end_date__c.field-meta.xml
<CustomField>
    <fullName>latest_product_end_date__c</fullName>
    <label>Latest product end date</label>
    <summarizedField>Opportunity.Product_Renewal_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>