uipath-commons/main/default/objects/Account/fields/LD_USE_DnB_Optimize__c.field-meta.xml
<CustomField>
    <fullName>LD_USE_DnB_Optimize__c</fullName>
    <defaultValue>true</defaultValue>
    <description>“Checked” will allow a match from Optimizer, where an “Unchecked” box will exclude the record
from matching.</description>
    <label>Allow D&amp;B Optimizer</label>
    <type>Checkbox</type>
</CustomField>