uipath-commons/main/default/objects/Account/fields/Legal__c.field-meta.xml
<CustomField>
        <fullName>Legal__c</fullName>
        <label>Legal  Entity Name</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>