uipath-commons/main/default/objects/Account/fields/Legal_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Compliance_Status__c</fullName>
    <description>Used to mark if accounts are part of any regulatory lists. Managed by Legal Compliance</description>
    <inlineHelpText>Used to mark if accounts are part of any regulatory lists. Managed by Legal Compliance</inlineHelpText>
    <label>Legal Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Excepted</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>