uipath-commons/main/default/objects/Account/fields/License_Agreement_Status__c.field-meta.xml
<CustomField>
        <fullName>License_Agreement_Status__c</fullName>
        <label>License Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>UiPath, provided</fullName>
                </value>
                <value>
                    <fullName>UiPath, signed</fullName>
                </value>
                <value>
                    <fullName>External, provided</fullName>
                </value>
                <value>
                    <fullName>External, signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>