uipath-commons/main/default/objects/Account/fields/Licensing_clarification__c.field-meta.xml
<CustomField>
        <fullName>Licensing_clarification__c</fullName>
        <label>Licensing clarification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct contact, Sales Rep in CC</fullName>
                </value>
                <value>
                    <fullName>No direct contact, Sales Rep contacts customer</fullName>
                </value>
                <value>
                    <fullName>Ask Sales Rep approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>