uipath-commons/main/default/objects/Account/fields/Link_to_MPA__c.field-meta.xml
<CustomField>
    <fullName>Link_to_MPA__c</fullName>
    <description>SLTECH-6008</description>
    <label>Link to MPA</label>
    <type>Url</type>
</CustomField>