uipath-commons/main/default/objects/Account/fields/Maintenance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Flag__c</fullName>
    <label>Maintenance Flag</label>
    
        <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Premium Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>