uipath-commons/main/default/objects/Account/fields/Market_Position__c.field-meta.xml
<CustomField>
        <fullName>Market_Position__c</fullName>
        <label>Market Position</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>