uipath-commons/main/default/objects/Account/fields/Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Marketplace__c</fullName>
    <description>Used by Tech Alliances</description>
    <label>Marketplace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>