uipath-commons/main/default/objects/Account/fields/Matched_with_D_B__c.field-meta.xml
<CustomField>
        <fullName>Matched_with_D_B__c</fullName>
        <label>Matched with D&amp;B</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Partially Matched</fullName>
                </value>
                <value>
                    <fullName>Not in D&amp;B</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>