uipath-commons/main/default/objects/Account/fields/Maturity_Score__c.field-meta.xml
<CustomField>
        <fullName>Maturity_Score__c</fullName>
        <label>Maturity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>