uipath-commons/main/default/objects/Account/fields/Max_of_Services_Quarter__c.field-meta.xml
<CustomField>
        <fullName>Max_of_Services_Quarter__c</fullName>
        <formula>IF(Sum_of_Open_Renewals__c &lt; 100000, 6,  
IF((Sum_of_Open_Renewals__c &gt;= 100000 &amp;&amp; Sum_of_Open_Renewals__c &lt; 200000), 12,  
IF((Sum_of_Open_Renewals__c &gt;=200000 &amp;&amp; Sum_of_Open_Renewals__c &lt; 500000), 18, 
IF((Sum_of_Open_Renewals__c &gt;= 500000 &amp;&amp; Sum_of_Open_Renewals__c &lt; 750000), 30, 
IF((Sum_of_Open_Renewals__c &gt;= 750000 &amp;&amp; Sum_of_Open_Renewals__c &lt; 1000000),42, 
IF(Sum_of_Open_Renewals__c &gt;= 1000000, 60, 0) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>