uipath-commons/main/default/objects/Account/fields/Meets_CSM_Criteria__c.field-meta.xml
<CustomField>
        <fullName>Meets_CSM_Criteria__c</fullName>
        <label>Meets CSM Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No-Approved</fullName>
                </value>
                <value>
                    <fullName>Manually qualifies</fullName>
                    <isActive>false</isActive>
                    <label>Manually qualifies</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>