uipath-commons/main/default/objects/Account/fields/MIN_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>MIN_Close_Date__c</fullName>
    <description>Field that is used to help calculate new account logos (won business) based on a given time period.</description>
    <label>MIN Close Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>