uipath-commons/main/default/objects/Account/fields/MOM_Website_Traffic__c.field-meta.xml
<CustomField>
        <fullName>MOM_Website_Traffic__c</fullName>
        <description>Month on Month website traffic info pulled by a bot form DemandBase and uploaded to Salesforce once per day</description>
        <inlineHelpText>MOM change in website traffic from this account</inlineHelpText>
        <label>MOM Website Traffic</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>