uipath-commons/main/default/objects/Account/fields/MSA__c.field-meta.xml
<CustomField>
        <fullName>MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the customer have an MSA with UiPath?</description>
        <label>MSA</label>
        <type>Checkbox</type>
    </CustomField>