uipath-commons/main/default/objects/Account/fields/MSA_Custom_Sections__c.field-meta.xml
<CustomField>
    <fullName>MSA_Custom_Sections__c</fullName>
    <description>Select one or more sections where the MSA has custom stipulations.</description>
    <label>MSA Custom Sections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSA Travel Policy</fullName>
            </value>
            <value>
                <fullName>MSA Background Check</fullName>
            </value>
            <value>
                <fullName>MSA Security Clearance</fullName>
            </value>
            <value>
                <fullName>MSA Payment Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>