uipath-commons/main/default/objects/Account/fields/MSA_Document__c.field-meta.xml
<CustomField>
    <fullName>MSA_Document__c</fullName>
    <description>Document link to the MSA</description>
    <label>MSA Document</label>
    <type>Url</type>
</CustomField>