uipath-commons/main/default/objects/Account/fields/MSA_Execution_Date__c.field-meta.xml
<CustomField>
        <fullName>MSA_Execution_Date__c</fullName>
        <inlineHelpText>Date the MSA was signed by all parties.</inlineHelpText>
        <label>MSA Execution Date</label>
        <type>Date</type>
    </CustomField>