uipath-commons/main/default/objects/Account/fields/MSA_Title__c.field-meta.xml
<CustomField>
        <fullName>MSA_Title__c</fullName>
        <inlineHelpText>The title or name of the MSA document</inlineHelpText>
        <label>MSA Title</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>