uipath-commons/main/default/objects/Account/fields/Nb_of_Prod_AR__c.field-meta.xml
<CustomField>
    <fullName>Nb_of_Prod_AR__c</fullName>
    <inlineHelpText>Total number of production Attended Robots</inlineHelpText>
    <label>Nb of Prod AR</label>
    <summarizedField>Opportunity.Nb_of_Prod_AR__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>